# cargo-chadr

./: .gitignore  Cargo.toml
pages/: index.html
pages/other_app/: index.html
src/: chad.rs  init.rs  link.rs  main.rs  opts.rs  pages.rs  template.rs
