[package]
name = "cargo-chadr"
version = "1.0.10"
edition = "2021"
license = "MIT"
description = "The tool to build CHADstack programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
notify = "5.1.0"
walkdir = "2.3.2"
